--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,6 @@
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
