--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,7 @@
         <script type="text/javascript" src="js/underscore-1.7.0.min.js"></script>
         <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
         <script type="text/javascript" src="js/backbone-1.1.2.min.js"></script>
+        <script type="text/javascript" src="js/ractive.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
