--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,8 @@
         <title>Hello World</title>
     </head>
     <body>
+        <section id="container"></section>
+<!--        
         <div class="app">
             <h1>Apache Cordova</h1>
             <div id="deviceready" class="blink">
@@ -43,6 +45,7 @@
                 <p class="event received">Device is Ready</p>
             </div>
         </div>
+    -->        
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/underscore-1.7.0.min.js"></script>
         <script type="text/javascript" src="js/jquery-1.9.0.min.js"></script>
